--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <meta name="description" content="math.js | basic usage">
     <script src="https://unpkg.com/mathjs/lib/browser/math.js"></script>
     <script src="hill.js"></script>
-    <script src="FileSaver.js/dist/FileSaver.js"></script>
+    <script src="FileSaver/dist/FileSaver.js"></script>
     <link rel="icon" href="https://image.flaticon.com/icons/png/512/1808/1808972.png">
     <link rel="stylesheet" href="style.css">
     <title>Algoritmo de Hill</title>
