--- a/home.html
+++ b/home.html
@@ -47,5 +47,11 @@
             <button type="button" id="download" onclick="guardar()">Descargar</button>
         </div>
     </div>
+    <div class="footer">
+        <div>
+            <a href="https://github.com/rvv3nd/transposicion/blob/main/transposicion.js"><img src="https://img.icons8.com/material-sharp/24/000000/github.png"/></a>
+        </div>
+        <div><a href="https://github.com/rvv3nd/transposicion/blob/main/transposicion.js">Código de la práctica</a></div>
+    </div>
 </body>
 </html>
